fixed margins on mobile media query

--- a/week-5/day-1/aboutstyle.css
+++ b/week-5/day-1/aboutstyle.css
@@ -49,3 +49,10 @@ a {
     font-size: larger;
     
 }
+
+@media only screen and (max-width: 580px) {
+    h2 {
+        text-align: center;
+        padding: 3rem 3rem 3rem 3rem;
+    }
+}
